efk/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /kibana
        pathType: ImplementationSpecific
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
